# rfmt

./: Cargo.toml  README.md
examples/: cmt_lit.rs  dump_ast.rs  dump_ast_file.rs  dump_ast_str.rs  pprust.rs
src/: .ft.rs.swo  ast.rs  dump_ast.rs  ft.rs  ir.rs  main.rs  rfmt.rs  tr.rs  ts.rs
tests/attrs/: attr.ast  attr.rs  doc.ast  doc.json  doc.rs  doc_comment.ast  doc_comment.json  doc_comment.rs  inner.ast  inner.json  meta_list.ast  meta_list.rs  meta_list_idents.ast  meta_list_idents.rs  meta_list_name_value_str.ast  meta_list_paths.ast  meta_name_value_str.ast  meta_name_value_str.rs  meta_path.ast  meta_path.rs  meta_word.ast  outer.ast  outer.json  sugared_doc.ast  sugared_doc.json  tool_attr.ast
tests/comments/: block.rs  comment.rs  enum.rs  extern_crate.rs  for.rs  foreign.rs  macro.rs  mod.rs  patten.rs  struct.rs  struct_patten.rs  trait.rs  try_block.rs  union.rs
tests/examples/: a.rs  b.rs  c.rs  comment.rs  d.rs  e.rs  f.rs  g.rs  main.rs
tests/exprs/: box.rs  closure.rs  for.rs  if.rs  list_op.rs  match.rs  path.rs  repeat.rs  struct.rs  while.rs
tests/ft/: block.rs  expr.rs  fn.rs  foreign.rs  generics.rs  macro.rs  match.rs  patten.rs  stmt.rs
tests/issues/: blank_line.rs  block_one_line.rs  closure.rs  fn_one_line.rs  if_let_one_line.rs  if_let_wrap.rs  impl_method_one_line.rs  match.rs  match_wrap.rs  method_self.rs  mod_nl.rs  nl.rs  return_trait.rs  struct_patten.rs  trait_method.rs  trait_method_one_line.rs  use_nl.rs
tests/items/: asm.rs  comment.json  comment.rs  enum.rs  existential.rs  extern_crate.ast  fn.rs  foreign.rs  mod.rs  (+16 more)
(+217 files in other folders)
