[package]
name = "rfmt"
version = "0.1.0"
authors = ["baitu <zbaitu@gmail.com>"]
homepage = "https://github.com/zBaitu/rfmt"
repository = "https://github.com/zBaitu/rfmt"
keywords = ["formatter"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = """
Another Rust source code formatter.
"""
edition = "2018"

[[bin]]
name = "rfmt"

[dependencies]
structopt = "0.2"
rustc-ap-syntax = "506.0.0"
rustc-ap-syntax_pos = "506.0.0"
