[package]
name = "rfmt"
version = "1.38.0"
authors = ["baitu <zbaitu@gmail.com>"]
homepage = "https://github.com/zBaitu/rfmt"
repository = "https://github.com/zBaitu/rfmt"
keywords = ["formatter"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = """
Another Rust source code formatter.
"""
edition = "2021"

[[bin]]
name = "rfmt"

[dependencies]
structopt = "0.3"
walkdir = "2"

rustc-ap-rustc_ast = "727.0.0"
rustc-ap-rustc_parse = "727.0.0"
rustc-ap-rustc_session = "727.0.0"
rustc-ap-rustc_span = "727.0.0"
